--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/stack": "^5.4.1",
     "expo": "~37.0.3",
     "expo-camera": "~8.2.0",
+    "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animated-loader": "^0.0.8",
     "react-native-dropdown-menu": "^2.0.0",
-    "react-native-dropdown-picker": "^3.0.5",
+    "react-native-dropdown-picker": "^3.5.1",
+    "react-native-fab": "^1.0.17",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-maps": "^0.26.1",
     "react-native-material-dropdown": "^0.11.1",
